[package]
name = "memoriae"
version = "0.1.0"
edition = "2024"
authors = ["Memoriae Labs <support@example.com>"]
description = "Quiet Texture VST3/CLAP tone-shaping plugin"
license = "MIT"

[lib]
name = "memoriae"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use the upstream git tag to avoid registry resolution issues (e.g. "no matching package named `nih_plug` found").
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", tag = "v0.11.0", features = ["clap", "vst3"] }
